update based on repo
git-svn-id: https://plugins.svn.wordpress.org/ignitiondeck/trunk@1074463 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/idf-admin.css
+++ b/css/idf-admin.css
@@ -273,17 +273,21 @@
 .ignitiondeck_page_idf-extensions .wrap {
     max-width: 975px
 }
+.ignitiondeck_page_idf-extensions .extension_header {
+     margin: 0;
+     padding: 40px 0 0 30px;
+}
 .ignitiondeck_page_idf-extensions .extension {
-    display: inline-block;
-    width: 200px;
+  display: inline-block;
+  width: 200px;
     vertical-align: top;
-    border-right: 1px solid #eee;
+  border-right: 1px solid #eee;
     padding-left: 20px;
     padding-right: 20px;
     margin: 30px 0 10px 0;
 } 
 .ignitiondeck_page_idf-extensions .extension-title {
-    text-align: center;
+  text-align: center;
     font-weight: lighter;
     font-size: 130%;
     border-top: 1px solid #eee;
@@ -291,7 +295,7 @@
     padding: 20px 0 0 0;
 } 
 .ignitiondeck_page_idf-extensions .extension-desc {
-    text-align: left;
+  text-align: left;
     padding: 0 0px;
     height: 70px;
     overflow: scroll;
@@ -309,32 +313,36 @@
     
 } 
 .ignitiondeck_page_idf-extensions .extension img {
-    text-align: left;
-    padding: 0 10px;
-    margin: 0 auto;
-    display: block;
-    height: auto;
-    width: auto;
-    max-height: 60px;
-    max-width: 160px;
+     text-align: left;
+     padding: 0 10px;
+     margin: 0 auto;
+     display: block;
+     height: auto;
+     width: auto;
+     max-height: 60px;
+     max-width: 160px;
 } 
 .ignitiondeck_page_idf-extensions .extension-link {
-    text-align: center;
+  text-align: center;
 }
 
 /* * Themes Grid * */
 
 .ignitiondeck_page_idf-themes .wrap {
-    max-width: 1043px;
+     max-width: 1160px;
+     margin: 0;
 }
+.ignitiondeck_page_idf-themes .extension_header {
+     margin: 0;
+     padding: 40px 0 0 30px;
+}
+
 .ignitiondeck_page_idf-themes .extension {
-    display: inline-block;
-    width: 300px;
-    vertical-align: top;
-    border-right: 1px solid #eee;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 30px 0 10px 0;
+     display: inline-block;
+     width: 300px;
+     vertical-align: top;
+     padding: 40px 30px;
+     margin: 0;
 } 
 .ignitiondeck_page_idf-themes .extension-title {
     text-align: center;
