--- a/css/idf.css
+++ b/css/idf.css
@@ -63,6 +63,7 @@
 	box-sizing: border-box;
 	width: 90%;
 	margin: 0 auto;
+	font-size: 12px;
 }
 .ignitiondeck.idc_lightbox form {
 	margin: 0;
@@ -78,13 +79,16 @@
 .idc_lightbox .text {
 	margin-top: 14px;
 	color: #444;
+	margin-bottom: 14px;
 }
 .ignitiondeck.idc_lightbox form .form-row {
 	float: none;
 }
+
 .ignitiondeck.idc_lightbox .form-row.total {
 	padding-left: 10px;
 }
+
 .ignitiondeck.idc_lightbox .form-row label {
 	text-indent: 0;
 	color: #444;
@@ -145,7 +149,6 @@
 	font-variant: normal !important;
 	text-transform: none !important;
 	speak: none;
-	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
     text-align: center;
@@ -170,12 +173,22 @@
 	padding-bottom: 0;
 }
 .ignitiondeck.idc_lightbox .form-row.total input {
-	padding: 15px;
-	line-height: normal;
+	line-height: 20px;
+  	margin: 0 0 10px;
+  	padding: 8px 0 5px 8px;
+	border: 1px solid #e7ebed;
+	color: #90a4ae;
 }
 .ignitiondeck.idc_lightbox form .form-row .idc-dropdown__select {
 	white-space: nowrap;
 }
+
+.ignitiondeck form .form-row .idc-dropdown:after {
+	content: '' !important;
+    font-family: "ignitiondeck-font-1" !important;
+}
+
 .idc_lightbox button.mfp-close {
 }
-.ignitiondeck form .form-row.twothird, .ignitiondeck form .twothird { width: 65.66% !important; }
+
+.ignitiondeck form .form-row.twothird, .ignitiondeck form .twothird { width: 65.66% !important;}
